Support enriched Skroutz product specifications
